--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -75,3 +75,10 @@
 .wp_hrms_meta_data .form-field .button {
     margin-left: 4px;
 }
+.employee-image {
+    border: 1px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.1);
+    height: 32px;
+    width: 32px;
+}
